--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <base href="/">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jest Test</title>
-</head>
-<body>
-<div id="app"></div>
-<script src="/bundle.js"></script>
-</body>
+  <head>
+    <base href="/">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Jest Test</title>
+  </head>
+
+  <body style="background-color: #42141414">
+    <div id="app"></div>
+    <script src="/bundle.js"></script>
+  </body>
 </html>
